--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,5 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 django-cors-headers==4.0.0
 requests==2.31.0
-pillow==9.5.0
+pillow==10.4.0
+python-dotenv==1.0.1
