--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,6 @@ django==5.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.4.0
-requests==2.31.0
+requests>=2.32.0
 pillow==10.4.0
 python-dotenv==1.0.1
